--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -30,3 +30,11 @@ services:
         - 8000:80
         depends_on:
         - backend
+
+    frontend:
+        build: ./frontend
+        ports:
+            - 8002:80
+        depends_on:
+            - nginx
+            
